--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   local_auth: ^2.1.2
   fl_chart: ^0.55.2
   firebase_database: ^10.0.9
-  video_compress: ^3.1.2
+  charts_flutter: ^0.12.0
   
 dev_dependencies:
   flutter_test:
